@@ -12,7 +12,6 @@
 	- Convert Host mode demos to class drivers
 	- Convert Host mode demos to schedulerless
 	- Add standardized descriptor names to class driver structures, controlled by USE_NONSTANDARD_DESCRIPTOR_NAMES
-	- Device demos error if endpoint config fail
 ============================
 
  /** \page Page_ChangeLog Project Changelog
@@ -23,6 +22,8 @@
   *  - Added new class drivers and matching demos to the library for rapid application development
   *  - Added incomplete device and host mode demos for later enhancement
   *  - Changed bootloaders to use FLASHEND rather than the existence of RAMPZ to determine if far FLASH pointers are needed
+  *  - Error status LEDs shown when device endpoint configuration fails to complete
+  *  - MIDI device demo no longer blocks if a note change event is sent while the endpoint is not ready
   *
   *
   *  \section Sec_ChangeLog090605 Version 090605
